<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/linerLayoutParent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:padding="@dimen/fab_margin"
    tools:showIn="@layout/activity_main">

    <Button
        style="@style/ButtonDefaultStyle"
        android:text="@string/show_toast"
        android:textAllCaps="false"
        android:id="@+id/buttonShowToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/ButtonDefaultStyle"
        android:text="@string/alert_with_custom_view"
        android:textAllCaps="false"
        android:id="@+id/buttonAlertCustomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        style="@style/ButtonDefaultStyle"
        android:text="@string/show_yesno_alert"
        android:textAllCaps="false"
        android:id="@+id/buttonShowYesNoAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/ButtonDefaultStyle"
        android:text="@string/show_snackbar"
        android:textAllCaps="false"
        android:id="@+id/buttonSnackBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/ButtonDefaultStyle"
        android:text="@string/selection_dialog"
        android:textAllCaps="false"
        android:id="@+id/buttonSelectionDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        style="@style/ButtonDefaultStyle"
        android:text="@string/progress_dialog"
        android:textAllCaps="false"
        android:id="@+id/buttonProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        style="@style/ButtonDefaultStyle"
        android:text="Indeterminate Progress Dialog"
        android:textAllCaps="false"
        android:id="@+id/buttonProgressDialogSec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        style="@style/ButtonDefaultStyle"
        android:text="@string/open_activity"
        android:textAllCaps="false"
        android:id="@+id/buttonOpenActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>